[package]
name = "todo_backend"
version = "0.1.0"
authors = ["Giovanni Dejan <giovanni.dejan@binus.ac.id>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"

[profile.dev]
overflow-checks = true
opt-level = 1
debuginfo = true

[profile.release]
opt-level = 3